--- a/UI/code/Login_RauMa/Login/Login.csproj
+++ b/UI/code/Login_RauMa/Login/Login.csproj
@@ -100,6 +100,12 @@
   <ItemGroup>
     <None Include="Resources\lock2.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\user2-1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\user2-2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
