--- a/form_NhanVien(update)/form_NhanVien/form_NhanVien.csproj
+++ b/form_NhanVien(update)/form_NhanVien/form_NhanVien.csproj
@@ -89,10 +89,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmSua.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSua.Designer.cs">
+      <DependentUpon>frmSua.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSua.resx">
+      <DependentUpon>frmSua.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
