--- a/form_NhanVien(update)/form_NhanVien/form_NhanVien.csproj
+++ b/form_NhanVien(update)/form_NhanVien/form_NhanVien.csproj
@@ -142,6 +142,9 @@
   <ItemGroup>
     <None Include="Resources\loop2.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Icon\Xoa.PNG" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
