--- a/UI/code/Login_RauMa/DashBoar/DashBoar.csproj
+++ b/UI/code/Login_RauMa/DashBoar/DashBoar.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="NhanVien.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QL_NhanVien.cs">
       <SubType>Form</SubType>
@@ -107,6 +108,7 @@
     <Compile Include="QL_SanPham.Designer.cs">
       <DependentUpon>QL_SanPham.cs</DependentUpon>
     </Compile>
+    <Compile Include="TaiKhoan.cs" />
     <Compile Include="Them_sua.cs">
       <SubType>Form</SubType>
     </Compile>
