update form NhanVien

--- a/UI/code/Login_RauMa/BUS/BUS.csproj
+++ b/UI/code/Login_RauMa/BUS/BUS.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BUS_sanpham.cs" />
+    <Compile Include="NhanVienBUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
