--- a/UI/code/Login_RauMa/DAO/DAO.csproj
+++ b/UI/code/Login_RauMa/DAO/DAO.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAO_sanpham.cs" />
+    <Compile Include="NhanVienDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
