--- a/UI/code/Login_RauMa/DashBoar/DashBoar.csproj
+++ b/UI/code/Login_RauMa/DashBoar/DashBoar.csproj
@@ -78,6 +78,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QLSP_Admin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QLSP_Admin.Designer.cs">
+      <DependentUpon>QLSP_Admin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="QLSP_User.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QLSP_User.Designer.cs">
+      <DependentUpon>QLSP_User.cs</DependentUpon>
+    </Compile>
     <Compile Include="QL_NhanVien.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -122,6 +134,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="QLSP_Admin.resx">
+      <DependentUpon>QLSP_Admin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QLSP_User.resx">
+      <DependentUpon>QLSP_User.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="QL_NhanVien.resx">
       <DependentUpon>QL_NhanVien.cs</DependentUpon>
     </EmbeddedResource>
@@ -227,6 +245,9 @@
       <Project>{d97c869e-0463-44ee-a8f4-fcef1b3f7a7f}</Project>
       <Name>BUS</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\search1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
