--- a/UI/code/Login_RauMa/BUS/BUS.csproj
+++ b/UI/code/Login_RauMa/BUS/BUS.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BUS_loaisp.cs" />
     <Compile Include="BUS_sanpham.cs" />
     <Compile Include="NhanVienBUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
