--- a/UI/code/Login_RauMa/DAO/App.Config
+++ b/UI/code/Login_RauMa/DAO/App.Config
@@ -4,13 +4,6 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="ql_raumaEntities" connectionString="metadata=res://*/Model_QLSP.csdl|res://*/Model_QLSP.ssdl|res://*/Model_QLSP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=ql_rauma;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ql_raumaEntities1" connectionString="metadata=res://*/Model_QLSP.csdl|res://*/Model_QLSP.ssdl|res://*/Model_QLSP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=ql_rauma;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ql_raumaEntities2" connectionString="metadata=res://*/QL_RAUMA.csdl|res://*/QL_RAUMA.ssdl|res://*/QL_RAUMA.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAUMA\SQLEXPRESS;initial catalog=ql_rauma;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ql_raumaEntities3" connectionString="metadata=res://*/QL_RAUMA.csdl|res://*/QL_RAUMA.ssdl|res://*/QL_RAUMA.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAUMA\SQLEXPRESS;initial catalog=ql_rauma;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ql_raumaEntities4" connectionString="metadata=res://*/QLRAUMA.csdl|res://*/QLRAUMA.ssdl|res://*/QLRAUMA.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAUMA\SQLEXPRESS;initial catalog=ql_rauma;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -21,4 +14,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+<connectionStrings><add name="ql_raumaEntities" connectionString="metadata=res://*/QLRauMaModel.csdl|res://*/QLRauMaModel.ssdl|res://*/QLRauMaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAUMA\SQLEXPRESS;initial catalog=ql_rauma;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
