--- a/UI/code/Login_RauMa/DashBoar/App.config
+++ b/UI/code/Login_RauMa/DashBoar/App.config
@@ -4,9 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <connectionStrings>
-    <add name="ql_raumaEntities" connectionString="metadata=res://*/Model_QLSP.csdl|res://*/Model_QLSP.ssdl|res://*/Model_QLSP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=ql_rauma;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ql_raumaEntities1" connectionString="metadata=res://*/Model_QLSP.csdl|res://*/Model_QLSP.ssdl|res://*/Model_QLSP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=ql_rauma;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ql_raumaEntities2" connectionString="metadata=res://*/QL_RAUMA.csdl|res://*/QL_RAUMA.ssdl|res://*/QL_RAUMA.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAUMA\SQLEXPRESS;initial catalog=ql_rauma;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ql_raumaEntities3" connectionString="metadata=res://*/QL_RAUMA.csdl|res://*/QL_RAUMA.ssdl|res://*/QL_RAUMA.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAUMA\SQLEXPRESS;initial catalog=ql_rauma;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ql_raumaEntities" connectionString="metadata=res://*/QLRauMaModel.csdl|res://*/QLRauMaModel.ssdl|res://*/QLRauMaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAUMA\SQLEXPRESS;initial catalog=ql_rauma;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
