--- a/UI/code/Login_RauMa/DAO/DAO.csproj
+++ b/UI/code/Login_RauMa/DAO/DAO.csproj
@@ -51,53 +51,53 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CTHoaDon.cs">
-      <DependentUpon>QLRauMaModel.tt</DependentUpon>
+      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
     </Compile>
     <Compile Include="CTPhanQuyen.cs">
-      <DependentUpon>QLRauMaModel.tt</DependentUpon>
+      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
     </Compile>
     <Compile Include="DAO_loaisp.cs" />
     <Compile Include="DAO_sanpham.cs" />
     <Compile Include="HoaDon.cs">
-      <DependentUpon>QLRauMaModel.tt</DependentUpon>
+      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
     </Compile>
     <Compile Include="LoaiSP.cs">
-      <DependentUpon>QLRauMaModel.tt</DependentUpon>
+      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
     </Compile>
     <Compile Include="NhanVien.cs">
-      <DependentUpon>QLRauMaModel.tt</DependentUpon>
+      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
     </Compile>
     <Compile Include="NhanVienDAO.cs" />
     <Compile Include="PhanQuyen.cs">
-      <DependentUpon>QLRauMaModel.tt</DependentUpon>
+      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QLRauMaModel.Context.cs">
+    <Compile Include="QLRauMaEntity.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>QLRauMaModel.Context.tt</DependentUpon>
+      <DependentUpon>QLRauMaEntity.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="QLRauMaModel.cs">
+    <Compile Include="QLRauMaEntity.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>QLRauMaModel.tt</DependentUpon>
+      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
     </Compile>
-    <Compile Include="QLRauMaModel.Designer.cs">
+    <Compile Include="QLRauMaEntity.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>QLRauMaModel.edmx</DependentUpon>
+      <DependentUpon>QLRauMaEntity.edmx</DependentUpon>
     </Compile>
     <Compile Include="SanPham.cs">
-      <DependentUpon>QLRauMaModel.tt</DependentUpon>
+      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
     </Compile>
     <Compile Include="sp_helpdiagramdefinition_Result.cs">
-      <DependentUpon>QLRauMaModel.tt</DependentUpon>
+      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
     </Compile>
     <Compile Include="sp_helpdiagrams_Result.cs">
-      <DependentUpon>QLRauMaModel.tt</DependentUpon>
+      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
     </Compile>
     <Compile Include="sysdiagram.cs">
-      <DependentUpon>QLRauMaModel.tt</DependentUpon>
+      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -109,27 +109,27 @@
   <ItemGroup>
     <None Include="App.Config" />
     <None Include="packages.config" />
-    <EntityDeploy Include="QLRauMaModel.edmx">
+    <EntityDeploy Include="QLRauMaEntity.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>QLRauMaModel.Designer.cs</LastGenOutput>
+      <LastGenOutput>QLRauMaEntity.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="QLRauMaModel.edmx.diagram">
-      <DependentUpon>QLRauMaModel.edmx</DependentUpon>
+    <None Include="QLRauMaEntity.edmx.diagram">
+      <DependentUpon>QLRauMaEntity.edmx</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="QLRauMaModel.Context.tt">
+    <Content Include="QLRauMaEntity.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>QLRauMaModel.edmx</DependentUpon>
-      <LastGenOutput>QLRauMaModel.Context.cs</LastGenOutput>
+      <DependentUpon>QLRauMaEntity.edmx</DependentUpon>
+      <LastGenOutput>QLRauMaEntity.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="QLRauMaModel.tt">
+    <Content Include="QLRauMaEntity.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>QLRauMaModel.edmx</DependentUpon>
-      <LastGenOutput>QLRauMaModel.cs</LastGenOutput>
+      <DependentUpon>QLRauMaEntity.edmx</DependentUpon>
+      <LastGenOutput>QLRauMaEntity.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
