--- a/UI/code/Login_RauMa/DAO/DAO.csproj
+++ b/UI/code/Login_RauMa/DAO/DAO.csproj
@@ -61,6 +61,7 @@
     <Compile Include="HoaDon.cs">
       <DependentUpon>QLRauMaEntity.tt</DependentUpon>
     </Compile>
+    <Compile Include="HoaDonDAO.cs" />
     <Compile Include="LoaiSP.cs">
       <DependentUpon>QLRauMaEntity.tt</DependentUpon>
     </Compile>
