--- a/UI/code/Login_RauMa/DAO/DAO.csproj
+++ b/UI/code/Login_RauMa/DAO/DAO.csproj
@@ -51,45 +51,57 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CTHoaDon.cs">
-      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
+      <DependentUpon>QLRauMa.tt</DependentUpon>
     </Compile>
     <Compile Include="CTPhanQuyen.cs">
-      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
+      <DependentUpon>QLRauMa.tt</DependentUpon>
     </Compile>
     <Compile Include="DAO_loaisp.cs" />
     <Compile Include="DAO_sanpham.cs" />
     <Compile Include="HoaDon.cs">
-      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
+      <DependentUpon>QLRauMa.tt</DependentUpon>
     </Compile>
     <Compile Include="HoaDonDAO.cs" />
     <Compile Include="LoaiSP.cs">
-      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
+      <DependentUpon>QLRauMa.tt</DependentUpon>
     </Compile>
     <Compile Include="NhanVien.cs">
-      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
+      <DependentUpon>QLRauMa.tt</DependentUpon>
     </Compile>
     <Compile Include="NhanVienDAO.cs" />
     <Compile Include="PhanQuyen.cs">
-      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
+      <DependentUpon>QLRauMa.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QLRauMaEntity.Context.cs">
+    <Compile Include="QLRauMa.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>QLRauMaEntity.Context.tt</DependentUpon>
+      <DependentUpon>QLRauMa.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="QLRauMaEntity.cs">
+    <Compile Include="QLRauMa.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
+      <DependentUpon>QLRauMa.tt</DependentUpon>
     </Compile>
-    <Compile Include="QLRauMaEntity.Designer.cs">
+    <Compile Include="QLRauMa.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>QLRauMaEntity.edmx</DependentUpon>
+      <DependentUpon>QLRauMa.edmx</DependentUpon>
     </Compile>
     <Compile Include="SanPham.cs">
-      <DependentUpon>QLRauMaEntity.tt</DependentUpon>
+      <DependentUpon>QLRauMa.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>QLRauMa.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagrams_Result.cs">
+      <DependentUpon>QLRauMa.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagram.cs">
+      <DependentUpon>QLRauMa.tt</DependentUpon>
+    </Compile>
+    <Compile Include="theoloai_Result.cs">
+      <DependentUpon>QLRauMa.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -101,12 +113,12 @@
   <ItemGroup>
     <None Include="App.Config" />
     <None Include="packages.config" />
-    <EntityDeploy Include="QLRauMaEntity.edmx">
+    <EntityDeploy Include="QLRauMa.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>QLRauMaEntity.Designer.cs</LastGenOutput>
+      <LastGenOutput>QLRauMa.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="QLRauMaEntity.edmx.diagram">
-      <DependentUpon>QLRauMaEntity.edmx</DependentUpon>
+    <None Include="QLRauMa.edmx.diagram">
+      <DependentUpon>QLRauMa.edmx</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -116,15 +128,15 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="QLRauMaEntity.Context.tt">
+    <Content Include="QLRauMa.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>QLRauMaEntity.edmx</DependentUpon>
-      <LastGenOutput>QLRauMaEntity.Context.cs</LastGenOutput>
+      <DependentUpon>QLRauMa.edmx</DependentUpon>
+      <LastGenOutput>QLRauMa.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="QLRauMaEntity.tt">
+    <Content Include="QLRauMa.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>QLRauMaEntity.edmx</DependentUpon>
-      <LastGenOutput>QLRauMaEntity.cs</LastGenOutput>
+      <DependentUpon>QLRauMa.edmx</DependentUpon>
+      <LastGenOutput>QLRauMa.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
