--- a/UI/code/Login_RauMa/DTO/DTO.csproj
+++ b/UI/code/Login_RauMa/DTO/DTO.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChiTietHoaDonDTO.cs" />
     <Compile Include="DTO_loaisp.cs" />
     <Compile Include="DTO_sanpham.cs" />
     <Compile Include="HoaDonDTO.cs" />
