--- a/UI/code/Login_RauMa/BUS/BUS.csproj
+++ b/UI/code/Login_RauMa/BUS/BUS.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="BUS_loaisp.cs" />
     <Compile Include="BUS_sanpham.cs" />
+    <Compile Include="ChiTietHoaDonBUS.cs" />
     <Compile Include="DangKiTaiKhoanBUS.cs" />
     <Compile Include="DoiMatKhauBUS.cs" />
     <Compile Include="HoaDonBUS.cs" />
