--- a/qlrauma/qlrauma/qlrauma.csproj
+++ b/qlrauma/qlrauma/qlrauma.csproj
@@ -198,5 +198,8 @@
   <ItemGroup>
     <None Include="img\bill.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Icon\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
